--- a/writing.html
+++ b/writing.html
@@ -37,10 +37,11 @@
         </table>
     </div>
     <div class="grid-x grid-margin-x ">
-        <div style="height: 300px;" class="callout cell medium-6  primary">
+        <div style="height: 330px;" class="callout cell medium-6  primary">
             <label><h5>Session name:</h5>
                 <input type="text" placeholder="Name">
             </label>
+            <h5>Homework:</h5>
             <div class="text-center">
                 <span class="label success clicky" v-on:click="play()"><i style="font-size: 3rem;width: 50px;" class=" fi-play"></i></span>
                 <span class="label alert clicky" v-on:click="stop()"><i style="font-size: 3rem;width: 50px;" class="fi-stop "></i></span>
