--- a/do.html
+++ b/do.html
@@ -94,7 +94,7 @@
 
         </div>
         <div class="grid-x grid-margin-x">
-            <div class="cell medium-1">Movement:{{accVal}}</div>
+            <div class="cell medium-1" id="accTxt">Movement:{{accVal}}</div>
             <div class=" cell medium-10  ">
                 <div class="warning progress">
                     <div class="progress-meter" style="width: 50%">
