--- a/do.html
+++ b/do.html
@@ -93,8 +93,9 @@
             </div>
 
         </div>
+        <h3 id="accTxt"></h3>
         <div class="grid-x grid-margin-x">
-            <div class="cell medium-1" id="accTxt">Movement:{{accVal}}</div>
+            <div class="cell medium-1" id=""> Movement:{{accVal}}</div>
             <div class=" cell medium-10  ">
                 <div class="warning progress">
                     <div class="progress-meter" style="width: 50%">
