--- a/do.html
+++ b/do.html
@@ -60,6 +60,7 @@
             <label><h5>Pause intereval: 30 Minutes</h5>
             </label>
             <label>
+                <h3 id="accTxt">HEre!</h3>
                 <h5 >Pauses on/off:</h5>
                 <section class="switch" style="display: inline;">
                     <input class="switch-input" id="pauses" v-model="pausesCheck" type="checkbox" name="exampleSwitch"/>
@@ -93,7 +94,7 @@
             </div>
 
         </div>
-        <h3 id="accTxt"></h3>
+
         <div class="grid-x grid-margin-x">
             <div class="cell medium-1" id=""> Movement:{{accVal}}</div>
             <div class=" cell medium-10  ">
