Acc impl.wewqewqewq

--- a/do.html
+++ b/do.html
@@ -99,7 +99,7 @@
             <div class="cell medium-1" id=""> Movement:{{accVal}}</div>
             <div class=" cell medium-10  ">
                 <div class="warning progress">
-                    <div class="progress-meter" style="width: 50%">
+                    <div class="progress-meter" id="accObj" style="width: 50%">
                         <p class="progress-meter-text">50%</p>
                     </div>
                 </div>
