--- a/do.html
+++ b/do.html
@@ -95,11 +95,11 @@
         </div>
 
         <div class="grid-x grid-margin-x">
-            <div class="cell medium-1" id=""> Movement:{{accVal}}</div>
+            <div class="cell medium-1" id=""> Movement:</div>
             <div class=" cell medium-10  ">
                 <div class="warning progress">
                     <div class="progress-meter" id="accObj" style="width: 50%">
-                        <p class="progress-meter-text">80%</p>
+                        <p class="progress-meter-text">{{accVal}}%</p>
                     </div>
                 </div>
             </div>
