Acc impl.wewqewqewq

--- a/do.html
+++ b/do.html
@@ -87,7 +87,7 @@
             <div class=" cell medium-10  ">
                 <div class="success progress">
                     <div class="progress-meter" style="width: 50%">
-                        <p class="progress-meter-text">{{perc}}</p>
+                        <p class="progress-meter-text">{{perc}}%</p>
                     </div>
                 </div>
             </div>
