--- a/do.html
+++ b/do.html
@@ -87,7 +87,7 @@
             <div class=" cell medium-10  ">
                 <div class="success progress">
                     <div class="progress-meter" style="width: 50%">
-                        <p class="progress-meter-text">{{perc}}%</p>
+                        <p class="progress-meter-text">%</p>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
             <div class=" cell medium-10  ">
                 <div class="warning progress">
                     <div class="progress-meter" id="accObj" style="width: 50%">
-                        <p class="progress-meter-text" style="text-align: left">{{accVal}}%</p>
+                        <p class="progress-meter-text">{{accVal}}%</p>
                     </div>
                 </div>
             </div>
