--- a/do.html
+++ b/do.html
@@ -98,8 +98,8 @@
             <div class="cell medium-1" id=""> Movement:</div>
             <div class=" cell medium-10  ">
                 <div class="warning progress">
-                    <div class="progress-meter" id="accObj" style="width: 50%">
-                        <p class="progress-meter-text" style="text-align: left">{{accVal}}%</p>
+                    <div class="progress-meter" style="text-align: right" id="accObj" style="width: 50%">
+                        <p class="progress-meter-text">{{accVal}}%</p>
                     </div>
                 </div>
             </div>
