Adding the volume libary

--- a/do.html
+++ b/do.html
@@ -79,7 +79,7 @@
             <div class=" cell medium-10  ">
                 <div class="info progress">
                     <div class="progress-meter" id="luxObj" style="width: 50%">
-                        <p class="progress-meter-text">{{percLux}}</p>
+                        <p class="progress-meter-text">{{percLux}}%</p>
                     </div>
                 </div>
             </div>
