--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div>
                 <div class="title-bar" style="height: 30px">
                     <div class="title-bar-left">
-                        <i class="menu-icon"></i> <span class="title-bar-title">Quick Actions</span>
+                        <i class="menu-icon"></i> <span class="title-bar-title"><span class="fi-info" style="font-size: 1.7rem"></span> Quick Actions</span>
                     </div>
                 </div>
                 <div class="callout">
@@ -36,7 +36,7 @@
             <div id="notificationController">
                 <div class="title-bar" style="height: 30px">
                     <div class="title-bar-left">
-                        <i class="menu-icon"></i> <span class="title-bar-title">Due this Week</span>
+                        <i class="menu-icon"></i> <span class="title-bar-title"><span class="fi-info" style="font-size: 1.7rem"></span> Due this Week</span>
                     </div>
                     <div class="title-bar-center">
                         <small><a>All</a></small>
@@ -72,8 +72,8 @@
                     <ul class="tabs" data-tabs id="example-tabs">
                         <div class="grid-x">
                             <div class="cell small-2 text-center show-for-small-only "><a data-toggle="offCanvasLeft"><span style="font-size: 1.6rem;" class="fi-list medium"></span></a></div>
-                            <li class="cell medium-6 small-5 tabs-title is-active"><a href="#panel1" class="text-center" aria-selected="true">Write</a></li>
-                            <li class="tabs-title cell small-5 medium-6"><a class="text-center" href="#panel2">Do</a></li>
+                            <li class="cell medium-6 small-5 tabs-title is-active"><a href="#panel1" class="text-center" aria-selected="true">Management</a></li>
+                            <li class="tabs-title cell small-5 medium-6"><a class="text-center" href="#panel2">Productivity Hub</a></li>
                         </div>
                     </ul>
 
@@ -103,6 +103,7 @@
     <script src="js/vendor/foundation.js"></script>
     <script src="js/vendor/w3.js"></script>
     <script src="js/vendor/vue.js"></script>
+    <script src="js/volume-meter.js"></script>
     <script src="build/main.bundle.js"></script>
     <script>
         $("#datepicker").datepicker();
