--- a/sidePanel.html
+++ b/sidePanel.html
@@ -14,7 +14,7 @@
 <div>
     <div class="title-bar" style="height: 30px">
         <div class="title-bar-left">
-            <i class="menu-icon"></i> <span class="title-bar-title">Quick Actions</span>
+            <i class="menu-icon"></i> <span class="title-bar-title"><span class="fi-info" style="font-size: 1.7rem"></span> Quick Actions</span>
         </div>
     </div>
     <div class="callout">
@@ -26,7 +26,7 @@
 <div class="notificationController">
     <div class="title-bar" style="height: 30px">
         <div class="title-bar-left">
-            <i class="menu-icon"></i> <span class="title-bar-title">Due this Week</span>
+            <i class="menu-icon"></i> <span class="title-bar-title"><span class="fi-info" style="font-size: 1.7rem"></span> Due this Week</span>
         </div>
         <div class="title-bar-center">
 
