--- a/writing.html
+++ b/writing.html
@@ -1,5 +1,5 @@
 <div>
-    <h3>Managing homeworks <small>Create homeworks, notes to them and set due dates here</small></h3>
+    <h3><span class="fi-info" style="font-size: 1.7rem"></span> Managing homeworks <small>Create homeworks, notes to them and set due dates here</small></h3>
     <hr>
     <div id="homeworkManagement" class="grid-x grid-padding-x grid-margin-x">
 
@@ -70,7 +70,7 @@
     <hr>
 
 
-    <h3>Notes <small>Randon writings of yours</small></h3>
+    <h3><span class="fi-info" style="font-size: 1.7rem"></span> Notes</h3>
     <div class="callout" style="height: 90vh; overflow-y: scroll;">
 
         <div id="notesManagement">
